# LangGraph.Python.Practice

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/agents/: fast-build.md
.opencode/plugins/: commit-review.ts  disable-superpowers-for-fast-build.js
docs/superpowers/plans/: 2026-07-10-agent-guidance-and-readme.md  2026-07-10-chatbot-faq-graph.md  2026-07-10-commit-review-plugin.md
docs/superpowers/specs/: 2026-07-10-agent-guidance-and-readme-design.md  2026-07-10-chatbot-faq-graph-design.md  2026-07-10-commit-review-plugin-design.md
examples/: basic_graph.py  checkpoint_graph.py
examples/py_practices/: annotated_demo.py
src/langgraph_python_practice/: basic_graph.py  checkpoint_graph.py
tests/: test_basic_graph.py  test_checkpoint_graph.py
tests/opencode/: commit-review.test.ts
