[project]
name = "langgraph-python-practice"
version = "0.1.0"
description = "不依賴模型 API 的 LangGraph Python 學習案例"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=1.0,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.11,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
